# jargonaut

./: .gitignore  README.md  makepot  meson.build  test
data/: jargonaut.desktop.in  meson.build
debian/: changelog  control
usr/: meson.build
usr/lib/jargonaut/: jargonaut.py  settings.py  ui.py
usr/share/glib-2.0/schemas/: org.x.jargonaut.gschema.xml
usr/share/jargonaut/: jargonaut.ui  sample-conversation.html  shortcuts.ui  style.css  webview.css
