# Install the main script
install_data('bin/jargonaut', install_dir: prefix / 'bin', install_mode: 'rwxr-xr-x')

# Install the Python library
install_subdir('lib/jargonaut', install_dir: prefix / 'lib')

# Install shared data
install_subdir('share', install_dir: prefix / 'share', strip_directory: true)
